Style home page placeholder

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
 {% block body %}
-The K Network.
+<div class="landing">
+  <h1 class="logo">The K Network.</h1>
+  <p class="tagline">I don't know the knet tagline.</p>
+</div>
 {% endblock %}
