--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,6 @@
 {% block body %}
 <div class="landing">
   <h1 class="logo">The K Network.</h1>
-  <p class="tagline">I don't know the knet tagline.</p>
+  <p class="tagline">exploring what's possible in the world of teaching and learning</p>
 </div>
 {% endblock %}
