--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-<div class="landing">
+<div class="landing" role="main">
   <h1 class="logo">The K Network.</h1>
   <p class="tagline">exploring what's possible in the world of teaching and learning</p>
 </div>
