--- a/sass/general/_type.scss
+++ b/sass/general/_type.scss
@@ -38,6 +38,7 @@ a {
   h2 {
     @include trailer(.5);
     text-transform: uppercase;
+    font-weight: bold;
   }
 
   h3, h4, strong { font-weight: bold; }
