js for adding teacher name

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -7,11 +7,11 @@
     <h2 class="pagetitle">What's Possible</h2>
   </div>
   <div class="meta">
-    <p class="vcard empty">
+    <p class="vcard teacher empty">
       <b class="title">Teacher</b>:
       <span class="fn"></span>
     </p>
-    <p class="vcard empty">
+    <p class="vcard learner empty">
       <b class="title">Learner</b>:
       <span class="fn"></span>
     </p>
